# koko-devops

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py
app/config/: gunicorn.py  settings.py
devops/config/: Makefile  ansible.cfg  aws_ec2.yaml
devops/config/playbooks/: dependencies.yaml  master_node.yaml  ping.yaml  taint_master.yaml  worker_nodes.yaml
devops/infra/: Makefile  data.tf  locals.tf  main.tf  outputs.tf  variables.tf
devops/infra/templates/: userdata.cicd.sh  userdata.k8s.sh
devops/kubernetes/: app-ingress.yaml  app-service.yaml
devops/kubernetes/app/: deployment.yaml  service.yaml
devops/kubernetes/monitoring/elasticsearch/: es-volume.yaml  values.yaml
devops/kubernetes/monitoring/kibana/: values.yaml
tests/: conftest.py  test_app_endpoints.py
